--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section id="about">
     <h2>About Me</h2>
     <section id="about">
-    <img src="F:\Projects\My portfolio\photo.jpg" alt="V V Sherinas" class="profile-pic">
+    <img src="images/photo.jpg" alt="V V Sherinas" class="profile-pic">
     <p>Hi! I’m Sherinas, a BCA student with a strong interest in web development and cybersecurity. I enjoy learning how technology works — from designing responsive websites to understanding how to keep them secure. I’m currently exploring projects that help me strengthen both my coding and security fundamentals as I work toward a career in tech.</p>
   </section>
 </section>
@@ -137,5 +137,6 @@
 </script>
 </body>
 </html>
+
 
 
